TP-2526 - prevent TP box from wrapping to third line

--- a/drupal/sites/all/themes/tp4/css/styles.css
+++ b/drupal/sites/all/themes/tp4/css/styles.css
@@ -13126,7 +13126,7 @@ header .search .form-submit {
 /* line 720, ../sass/modules/_header.scss */
 #block-tp-custom-nav-tp-custom-nav-takepart-collab {
   margin-bottom: 0;
-  width: 126px;
+  width: 132px;
   font-size: 11px;
   line-height: 21px;
   font-weight: bold;
