--- a/drupal/sites/all/themes/tp4/sass/modules/_header.scss
+++ b/drupal/sites/all/themes/tp4/sass/modules/_header.scss
@@ -719,7 +719,7 @@ header {
 
 #block-tp-custom-nav-tp-custom-nav-takepart-collab {
 	margin-bottom: 0;
-	width: 126px;
+	width: 132px;
 	font-size: 11px;
 	line-height: 21px;
 	font-weight: bold;
